--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div> 
             
                     <div class="d-flex justify-content-center">
-                        <img src="Assets/mask group.png" alt="Profile Picture" class="img-fluid profile">
+                        <img src="Assets/Mask group.png" alt="Profile Picture" class="img-fluid profile">
                     </div>
                 </div>
             </div>
@@ -175,7 +175,7 @@
                     <img src="assets/bootstrap-logo.png" alt="Bootstrap Logo" class="img-fluid logo">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2 my-5 logo-pop">
-                    <img src="assets/github-logo.png" alt="GitHub Logo" class="img-fluid logo">
+                    <img src="assets/Github-logo.png" alt="GitHub Logo" class="img-fluid logo">
                 </div>
                 <div class="col-6 col-sm-4 col-md-3 col-lg-2 my-5 logo-pop">
                     <img src="assets/figma-logo.png" alt="Figma Logo" class="img-fluid logo">
