--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     </div> 
             
                     <div class="d-flex justify-content-center">
-                        <img src="Assets/mask-group.png" alt="Profile Picture" class="img-fluid profile">
+                        <img src="assets/mask-group.png" alt="Profile Picture" class="img-fluid profile">
                     </div>
                 </div>
             </div>
