--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="d-flex flex-column flex-lg-row gap-5 mt-5 align-items-center h-100">
                     <div class="d-flex flex-column text-lg-start h-100">
                         <h1 class="display-3 mb-3">About Me</h1>
-                        <p class="about-me-text">I am a final year computer science student in Bina Nusantara University who has completed my thesis and is awaiting graduation. During college I developed a specialization in Digital Creative Technology, which is developing creative design ideas and application. I'm passionate about web development, UI/UX design, and System Analyst. </p>
+                        <p class="about-me-text">Hi my name I Gusti Ayu Ngurah Stita Maharani usually called Tita. I am a final year computer science student in Bina Nusantara University who has completed my thesis and is awaiting graduation. During college I developed a specialization in Digital Creative Technology, which is developing creative design ideas and application. I'm passionate about web development, UI/UX design, and System Analyst. </p>
                         <p class="about-me-text">During my studies, I have produced several interesting digital projects. I also participated in a 1-year internship program as a System Analyst and Full-stack Developer. Through this academic and internship experience, I have developed skills in collecting user needs, designing solutions, creating UI/UX designs, developing programs, and conducting user testing.</p>
                         <button class="btn btn-green btn-custom2 mt-2" onclick="downloadPDF();">Download CV</button>
                     </div> 
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="card bg-dark text-white p-3 mt-3">
-                <h2>SMAK Santo Yoseph - Bali, Indonesia</h2>
+                <h2>SMAK Santo Yoseph - Denpasar, Indonesia</h2>
                 <div class="d-flex flex-wrap gap-2 mt-2">
                     <span class="badge bg-secondary fw-normal">Mathematics and Science</span>
                     <span class="badge bg-secondary fw-normal">Jul 2018 - 2021</span>
@@ -99,7 +99,7 @@
                 <div class="d-flex flex-wrap gap-2 mt-2">
                     <span class="badge bg-secondary fw-normal">Freelance</span>
                     <span class="badge bg-secondary fw-normal">UI Designer</span>
-                    <span class="badge bg-secondary fw-normal">Dec - Feb 2024</span>
+                    <span class="badge bg-secondary fw-normal">Dec 2023 - Feb 2024</span>
                 </div>
             </div>
         </div>
