--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="container my-5 py-5" id="about">
             <div class="row">
                 <div class="d-flex flex-column flex-lg-row gap-5 mt-5 align-items-center h-100">
-                    <div class="d-flex flex-column text-lg-start h-100" data-aos="fade-right">
+                    <div class="d-flex flex-column text-lg-start h-100" data-aos="zoom-in">
                         <h1 class="display-3 mb-3">About Me</h1>
                         <p class="about-me-text">Hi my name I Gusti Ayu Ngurah Stita Maharani usually called Tita. I am
                             a final year computer science student in Bina Nusantara University who has completed my
@@ -69,7 +69,7 @@
                         <button class="btn btn-green btn-custom2 mt-2" onclick="downloadPDF();">Download CV</button>
                     </div>
 
-                    <div class="d-flex justify-content-center" data-aos="fade-left">
+                    <div class="d-flex justify-content-center" data-aos="zoom-in">
                         <img src="assets/mask-group.png" alt="Profile Picture" class="img-fluid profile">
                     </div>
                 </div>
@@ -265,7 +265,7 @@
     </section>
 
     <section class="white-section" id="contact">
-        <div class="container my-5" data-aos="fade-left">
+        <div class="container my-5" data-aos="slide-up">
             <h2 class="display-1 fw-bold">Contact</h2>
             <h3 class="text-muted">Reach me via email or social media below</h3>
 
